components/observability/grafana/grafana-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
