components/observability/grafana/cilium-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana
  namespace: grafana
spec:
  endpointSelector: {}
  ingress:
    # Web UI traffic from Traefik
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    # Intra-namespace traffic (operator talking to grafana, etc.)
    - fromEndpoints:
        - {}
    # Health checks and probes
    - fromEntities:
        - host
        - remote-node
        - health
  egress:
    # DNS resolution
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
    # Kubernetes API Server (operator)
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    # Intra-namespace communication
    - toEndpoints:
        - {}
    # VictoriaMetrics TSDB queries
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: victoriametrics
      toPorts:
        - ports:
            - port: "8428"
              protocol: TCP
    # Authentik OIDC authentication & external resources
    - toEntities:
        - world
        - cluster
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
